FTP server with put size implemented and Server return codes.